cursive-bootstrap/tests/ui/E-TYP/E-TYP-2512.cursive
// RUN: compile-fail
// DIAG: E-TYP-2512
// SPEC: 5.3
// DESC: Attempting to assign incompatible opaque types

class Drawable {
    procedure draw(~) -> () { }
}

class Printable {
    procedure print(~) -> () { }
}

procedure get_drawable() -> opaque Drawable {
    return Circle{ radius: 1 }
}

procedure use_printable(x: opaque Printable) -> () {
    x ~> print()
}

record Circle <: Drawable {
    radius: i32
    procedure draw(~) -> () { }
}



public procedure main(move ctx: Context) -> i32 {
    let d: opaque Drawable = get_drawable()
    use_printable(d) //~ ERROR E-TYP-2512
    return 0
}

